5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1674_1880.log
== TEST (2019-04-30 10:32:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite aqui o valor de m: "))
if (m = 1):
	mes = "janeiro"
elif (m = 2):
	mes = "fevereiro"
elif (m = 3):
	mes = "marco"
elif (m = 4):
	mes = "abril"
elif (m = 5):
	mes = "maio"
elif (m = 6):
	mes = "junho"
elif (m = 7):
	mes = "julho"
elif (m = 8):
	mes = "agosto"
elif (m = 9):
	mes = "setembro"
elif (m = 10):
	mes = "outubro"
elif (m = 11):
	mes = "novembro"
elif (m = 12):
	mes = "dezembro"
else:
	mes = "numero de mes invalido"
-- ERROR:
File "XXXX", line 3
    if (m = 1):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:33:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite aqui o valor de m: "))
if (m == 1):
	mes = "janeiro"
elif (m == 2):
	mes = "fevereiro"
elif (m == 3):
	mes = "marco"
elif (m == 4):
	mes = "abril"
elif (m == 5):
	mes = "maio"
elif (m == 6):
	mes = "junho"
elif (m == 7):
	mes = "julho"
elif (m == 8):
	mes = "agosto"
elif (m == 9):
	mes = "setembro"
elif (m == 10):
	mes = "outubro"
elif (m == 11):
	mes = "novembro"
elif (m == 12):
	mes = "dezembro"
else:
	mes = "numero de mes invalido"
print(mes)
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:33:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite aqui o valor de m: "))
if (m == 1):
	mes = "janeiro"
elif (m == 2):
	mes = "fevereiro"
elif (m == 3):
	mes = "marco"
elif (m == 4):
	mes = "abril"
elif (m == 5):
	mes = "maio"
elif (m == 6):
	mes = "junho"
elif (m == 7):
	mes = "julho"
elif (m == 8):
	mes = "agosto"
elif (m == 9):
	mes = "setembro"
elif (m == 10):
	mes = "outubro"
elif (m == 11):
	mes = "novembro"
elif (m == 12):
	mes = "dezembro"
else:
	mes = "numero de mes invalido"
print(mes)
-- EXECUTION TIME:
0.133925
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
